tests/types_first_function_statics4/types_first_function_statics4.exp
Error --------------------------------------------------------------------------------------------------------- b.js:3:2

Cannot cast `A.prop` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   b.js:3:2
   3| (A.prop : string);
       ^^^^^^

References:
   a.js:4:10
   4| A.prop = 1;
               ^ [1]
   b.js:3:11
   3| (A.prop : string);
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:4:2

Cannot cast `B.prop` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   b.js:4:2
   4| (B.prop : string);
       ^^^^^^

References:
   a.js:5:10
   5| B.prop = 2;
               ^ [1]
   b.js:4:11
   4| (B.prop : string);
                ^^^^^^ [2]



Found 2 errors
